# python-foreman

./: .gitignore  .travis.yml  MANIFEST.in  README.md  README.rst  advanced.html  basic.html  bulid-requirements.txt  client.html  definitions.html  docs-requirements.txt  genindex.html  index.html  objects.inv  py-modindex.html  requirements.txt  search.html  searchindex.js  setup.cfg  setup.py  test-requirements.txt  tox.ini  tutorial.html
_modules/: index.html
_modules/foreman/: client.html
_sources/: advanced.txt  basic.txt  definitions.txt  index.txt
automation/: build-artifacts.packages  build-artifacts.sh
doc/: Makefile  basic.rst  client.rst  conf.py  definitions.rst  generate_doc.py  index.rst  tutorial.rst
foreman/: .client.py.swp  client.py  definitions.py
foreman/definitions/: 1.15.0-v1.json  1.4.2-v1.json  1.4.2-v2.json  1.5.0-v1.json  1.5.0-v2.json  1.6.3-v1.json  1.6.3-v2.json  1.7.1-v1.json  1.7.1-v2.json  1.7.2-v1.json  1.7.2-v2.json  1.9.2-v2.json
foreman_plugins/: foreman_reserve.py
scripts/: generate_version.sh  version_manager.py
tests/: mocks.py  test_defs.py
tests/fixtures/definitions/: 1.15.0-RC2-v2.json
