[metadata]
name = python-foreman
description = Simple low-level client library to access the Foreman API
description-file = README.rst
author = David Caro
author_email = dcaroest@redhat.com
home-page = https://github.com/david-caro/python-foreman
license = GPL-2
classifier =
        Intended Audience :: Developers
        Intended Audience :: Information Technology
        License :: OSI Approved :: GNU General Public License v2 (GPLv2)
        Operating System :: OS Independent
        Programming Language :: Python


[files]
packages =
    foreman
    foreman_plugins

[bdist_rpm]
requires = python-requests >= 0.14
           python-six
build_requires = python
                 python-setuptools
